Fixed issues with clicking add shift

--- a/src/styles/scheduler.css
+++ b/src/styles/scheduler.css
@@ -49,7 +49,7 @@ table.resource-table tbody tr td {
     border: 1px solid rgb(233, 233, 233) !important;
 }
 .ant-radio-button-wrapper.css-dev-only-do-not-override-htwhyh,
-.css-htwhyh {
+.ant-radio-button-wrapper.css-htwhyh {
     border: 0 !important;
     height: 3rem !important;
     background-color: #f0f0f0 !important;
